[package]
name = "mbopml"
path = "src/mbopml.rs"
version = "0.1.0"
authors = ["Matthew Gregg <mcg@braintube.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.11.4", features = ["json"] }
serde_json = "1.0.64"
xml = "0.8.3"
structopt = "0.3.24"
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "mbopml"
path = "src/mbopml.rs"