[package]
name = "mbopml"
path = "src/mbopml.rs"
version = "0.1.0"
authors = ["Matthew Gregg <mcg@braintube.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.12.9", features = ["json"] }
serde_json = "1.0.64"
xml = "0.8.3"
clap = { version = "4.5.16", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "mbopml"
path = "src/mbopml.rs"