[package]
name = "mbopml"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
reqwest = { version = "0.13.3", features = ["json"] }
serde_json = "1.0.149"
xml = "1.2.1"
clap = { version = "4.6.1", features = ["derive"] }
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }

[[bin]]
name = "mbopml"
path = "src/mbopml.rs"